methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: ';' expected but 'else' found.
    else
    ^